[Adi] Correct responsiveness on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -2104,17 +2104,9 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #services {
-	background: #FFFFFF url(../images/fog-4.jpg) no-repeat center bottom;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	background-size: cover;
-	background-attachment: fixed;
-	width: 100%;
-	height: 100%;
-	display: table;
-	position: relative;
+	background: rgb(235, 235, 235);
 	padding-top: 12rem;
-	padding-bottom: 12rem;
+	padding-bottom: 7.2rem;
 }
 #services .overlay {
 	position: relative;
